kube/test-services/redis-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-test
        image: redis:6.2-alpine
        ports:
        - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
